--- a/serverless.yml
+++ b/serverless.yml
@@ -1,10 +1,16 @@
 service: aws-nodejs # NOTE: update this with your service name
+custom: ${file(./serverless.env.json)}
 provider:
   name: aws
   runtime: nodejs6.10
   stage: dev
   region: ap-northeast-1
-
+  environment:
+    USER: ${self:custom.user}
+    HOST: ${self:custom.host}
+    DATABASE: ${self:custom.database}
+    PASSWORD: ${self:custom.password}
+    PORT: ${self:custom.port}
 package:
   include:
     - handler.js 
